mozilla fix on mobile.

--- a/assets/css/_cards.scss
+++ b/assets/css/_cards.scss
@@ -78,18 +78,12 @@
 
   .cards {
     display: flex;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     justify-content: space-between;
 
     .card {
-      //&.treatment {
-        flex-basis: 47%;
-        margin-bottom: 40px;
-
-        //&:last-child {
-        //  margin-bottom: 0;
-        //}
-      //}
+      flex-basis: 47%;
+      margin-bottom: 40px;
     }
   }
 
